Fixed bug with Customer Home support illustration stretching on desktop app
Before: https://cl.ly/11b3c31e9eb8
After: https://cl.ly/ea35f94983d3

--- a/client/my-sites/customer-home/style.scss
+++ b/client/my-sites/customer-home/style.scss
@@ -128,6 +128,8 @@
 
 		img {
 			margin: 0 7%;
+			height: 119px;
+			width: 137px;
 		}
 
 		.vertical-nav {
